--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,17 @@
 {
     "compilerOptions": {
-        "module": "es2015",
+        "module": "commonjs",
         "target": "es2015",
         "noImplicitAny": false,
         "sourceMap": false,
-        "typeRoots": ["node_modules/@types"]
-    }
+        "typeRoots": [
+            "node_modules/@types"
+        ]
+    },
+    "include": [
+        "src/**/*.ts"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
 }
